# vanna-streamlit2

./: .gitignore  ConversationManager.py  Dockerfile  README.md  app.py  chroma.sqlite3  docker-compose.yml  init_app_vars.py  myVanna.py  pyproject.toml  pyproject_local.toml  requirements.txt  sample.env  utility.py
DataGenie/: SnowflakeConnection.py  VannaLogger.py  azureopenai_embedding.py  chromasdb_vector.py  cosmosVectorStore.py  dataGenieApp.py  myVanna.py  utility.py
DataGenie/.streamlit/: config.toml
DataGenieApp/: README.md  biotech_database.db  biotech_database.db-journal  chroma.sqlite3  dataGenieApp.py  init_app_vars.py  myVanna.py  pyproject.toml  requirements.txt
notebooks/: snowflake-openai-standard-chromadb.ipynb
tests/: cosmosVectorStore.py
