[tool.poetry]
name = "DataGenie"
version = "1.0.0"
description = ""
authors = ["Matt Grobelny"]
readme = "README.md"
packages = [{include = "DataGenie"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.0"
python-dotenv = "^1.0.0"
kaleido = "0.2.1"
vanna = {extras = ["chromadb","openai"], version = "^0.0.30"}
db-dtypes = "^1.1.1"
streamlit-code-editor = "^0.1.10"
bokeh = "^2.0.0"
altair = "^4.0.0"
snowflake-connector-python = "^3.6.0"
ipython="^8.13.0"
streamlit_modal="^0.1.1"
[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
